--- a/Tutorial fis_exp.ipynb
+++ b/Tutorial fis_exp.ipynb
@@ -4,11 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial para o módulo aluno_exatas\n",
+    "# Tutorial para o módulo *aluno_exatas.fis_exp*\n",
     "\n",
     "## *fis\\_exp*\n",
     "\n",
     "Esse módulo tem como objetivo auxiliar o aluno que está cursando física experimental. Além de automatizar a propagação, permite gerar funções que facilitam a manipulação dos dados medidos.\n",
+    "\n",
+    "### FisExp\n",
+    "\n",
+    "Essa classe é útil principalmente na propagação de incertezas.\n",
     "\n",
     "#### Importando módulos úteis:"
    ]
@@ -44,10 +48,10 @@
      "output_type": "stream",
      "text": [
       "Função principal:  a**2 + b*c\n",
-      "Variáveis da função principal:  {a, b, c} \n",
+      "Variáveis da função principal:  {b, a, c} \n",
       "\n",
       "Propagação de incertezas da função principal:  sqrt(4*a**2*u_a**2 + b**2*u_c**2 + c**2*u_b**2)\n",
-      "Incertezas da propagação de incertezas:  [u_a, u_b, u_c]\n"
+      "Incertezas da propagação de incertezas:  [u_b, u_a, u_c]\n"
      ]
     }
    ],
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,13 +194,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "### MMQ\n",
+    "\n",
+    "Essa classe foi feita para facilitar a utilização do MMQ linear, com incertezas variáveis ou não.\n",
+    "\n",
+    "#### Importação de módulos\n",
+    "\n",
+    "O módulo `fis_exp` já foi importado, de forma que não é necessário importá-lo novamente.\n",
+    "\n",
+    "#### Inicializando o módulo\n",
+    "\n",
+    "O módulo pode ser inicializado de diferentes formas, dependendo de que tipo de MMQ se quer calcular."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mmq_inc_iguais = fe.MMQ()\n",
+    "mmq_inc_varia = fe.MMQ(fe.Incertezas.variaveis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Definição de valores\n",
+    "\n",
+    "Os módulos podem receber `lists`, `numpy.ndarrays` ou números normais (no caso de `incerteza_y` para incertezas iguais)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [0, 1, 2, 3, 4]\n",
+    "y = np.array([1, 3, 7, 8, 10])\n",
+    "\n",
+    "mmq_inc_iguais.x_values = x\n",
+    "mmq_inc_iguais.y_values = y\n",
+    "mmq_inc_iguais.incertezas_y = 1\n",
+    "\n",
+    "mmq_inc_varia.x_values = x\n",
+    "mmq_inc_varia.y_values = y\n",
+    "mmq_inc_varia.incertezas_y = [1, 1, 2, 1, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Recebendo de volta os coeficientes\n",
+    "\n",
+    "Os coeficientes da função na forma `y = a + b*x` são retornados no formato `[a,b]`, assim como as incertezas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coeficientes da função com incerteza constante:  [ 1.2  2.3]\n",
+      "Incertezas dos coeficientes da função com incerteza constante [ 0.77459667  0.31622777] \n",
+      "\n",
+      "Coeficientes da função com incerteza variável:  [ 1.01265823  2.36075949]\n",
+      "Incertezas dos coeficientes da função com incerteza variável [ 0.65822785  0.14556962]\n"
+     ]
+    }
+   ],
+   "source": [
+    "coef_inc_iguais, incert_inc_iguais = mmq_inc_iguais.coeficientes()\n",
+    "coef_inc_varia, incert_inc_varia = mmq_inc_varia.coeficientes()\n",
+    "\n",
+    "print ('Coeficientes da função com incerteza constante: ', coef_inc_iguais)\n",
+    "print ('Incertezas dos coeficientes da função com incerteza constante', incert_inc_iguais, '\\n')\n",
+    "\n",
+    "print ('Coeficientes da função com incerteza variável: ', coef_inc_varia)\n",
+    "print ('Incertezas dos coeficientes da função com incerteza variável', incert_inc_varia)"
+   ]
   }
  ],
  "metadata": {
