Exclusão do dump, evolução do calc_num, melhor documentação
Documentação:
    * Está usando o jupyter notebook e gerando um Markdown
    * setup.py gera documentação com suporte para Markdown
    * script make_dist organiza isso e faz upload dos arquivos necessários

calc_num:
    * Está usando anotações de tipo nos argumentos

--- a/Tutorial aluno_exatas.ipynb
+++ b/Tutorial aluno_exatas.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial para o módulo *aluno_exatas.fis_exp*\n",
+    "# Tutorial para o módulo *aluno_exatas*\n",
     "\n",
-    "## *fis\\_exp*\n",
+    "## *aluno_exatas.fis\\_exp*\n",
     "\n",
     "Esse módulo tem como objetivo auxiliar o aluno que está cursando física experimental. Além de automatizar a propagação, permite gerar funções que facilitam a manipulação dos dados medidos.\n",
     "\n",
-    "### FisExp\n",
+    "### *aluno_exatas.fis\\_exp.FisExp*\n",
     "\n",
     "Essa classe é útil principalmente na propagação de incertezas.\n",
     "\n",
@@ -20,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import aluno_exatas.fis_exp as fe\n",
@@ -48,10 +46,10 @@
      "output_type": "stream",
      "text": [
       "Função principal:  a**2 + b*c\n",
-      "Variáveis da função principal:  {b, a, c} \n",
+      "Variáveis da função principal:  {c, b, a} \n",
       "\n",
       "Propagação de incertezas da função principal:  sqrt(4*a**2*u_a**2 + b**2*u_c**2 + c**2*u_b**2)\n",
-      "Incertezas da propagação de incertezas:  [u_b, u_a, u_c]\n"
+      "Incertezas da propagação de incertezas:  [u_c, u_b, u_a]\n"
      ]
     }
    ],
@@ -114,7 +112,7 @@
      "output_type": "stream",
      "text": [
       "Função principal avaliada em c=5: 26\n",
-      "Propagação avaliada em c=5, u_b=1 10.246950766\n"
+      "Propagação avaliada em c=5, u_b=1 10.246950765959598\n"
      ]
     }
    ],
@@ -142,8 +140,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Função principal avaliada em diferentes valores de c:  [  16.   41.   66.   91.  116.]\n",
-      "Propagação avaliada em diferentes valores de c e u_b:  [  8.94427191  15.37042615  50.7937004   75.5314504   50.7937004 ]\n"
+      "Função principal avaliada em diferentes valores de c:  [ 16.  41.  66.  91. 116.]\n",
+      "Propagação avaliada em diferentes valores de c e u_b:  [ 8.94427191 15.37042615 50.7937004  75.5314504  50.7937004 ]\n"
      ]
     }
    ],
@@ -199,7 +197,7 @@
     "collapsed": true
    },
    "source": [
-    "### MMQ\n",
+    "### *aluno_exatas.fis\\_exp.MMQ*\n",
     "\n",
     "Essa classe foi feita para facilitar a utilização do MMQ linear, com incertezas variáveis ou não.\n",
     "\n",
@@ -267,11 +265,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coeficientes da função com incerteza constante:  [ 1.2  2.3]\n",
-      "Incertezas dos coeficientes da função com incerteza constante [ 0.77459667  0.31622777] \n",
+      "Coeficientes da função com incerteza constante:  [1.2 2.3]\n",
+      "Incertezas dos coeficientes da função com incerteza constante: [0.77459667 0.31622777] \n",
       "\n",
-      "Coeficientes da função com incerteza variável:  [ 1.01265823  2.36075949]\n",
-      "Incertezas dos coeficientes da função com incerteza variável [ 0.65822785  0.14556962]\n"
+      "Coeficientes da função com incerteza variável:  [1.01265823 2.36075949]\n",
+      "Incertezas dos coeficientes da função com incerteza variável: [0.65822785 0.14556962]\n"
      ]
     }
    ],
@@ -280,11 +278,160 @@
     "coef_inc_varia, incert_inc_varia = mmq_inc_varia.coeficientes()\n",
     "\n",
     "print ('Coeficientes da função com incerteza constante: ', coef_inc_iguais)\n",
-    "print ('Incertezas dos coeficientes da função com incerteza constante', incert_inc_iguais, '\\n')\n",
+    "print ('Incertezas dos coeficientes da função com incerteza constante:', incert_inc_iguais, '\\n')\n",
     "\n",
     "print ('Coeficientes da função com incerteza variável: ', coef_inc_varia)\n",
-    "print ('Incertezas dos coeficientes da função com incerteza variável', incert_inc_varia)"
+    "print ('Incertezas dos coeficientes da função com incerteza variável:', incert_inc_varia)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *aluno_exatas.calc_num*\n",
+    "\n",
+    "Esse módulo tem como objetivo auxiliar o aluno que está cursando cálculo numérico. Contém funções que implementam conceitos aprendidos em aula.\n",
+    "\n",
+    "#### Importando módulos úteis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import aluno_exatas.calc_num as cn\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos de aproximações sucessivas para achar zero de funções\n",
+    "\n",
+    "#### Definindo a função que será usada e sua derivada\n",
+    "\n",
+    "A definição da derivada é necessária para o método de Newton."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "    return x+np.cos(x)\n",
+    "\n",
+    "def flinha(x):\n",
+    "    return 1-np.sin(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Definindo aproximações iniciais para os métodos da secante, newton e bissecção\n",
+    "\n",
+    "* O método da secante precisa apenas da própria função e de duas aproximações para a raiz;\n",
+    "* O método de Newton precisa da função, sua derivada, e uma aproximação inicial;\n",
+    "* O método da bissecção precisa própria função e de duas aproximações para o intervalo que contém a raiz."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Função inicial avaliada nas aproximações iniciais:\n",
+      "f(-1) = -0.45969769413186023\n",
+      "f(0) = 1.0\n",
+      "f(1) = 1.5403023058681398\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_secante = 0.0\n",
+    "xo_secante = 1.0\n",
+    "\n",
+    "x_newton = 1.0\n",
+    "\n",
+    "a_bi = -1.0\n",
+    "b_bi = 0.0\n",
+    "\n",
+    "print('Função inicial avaliada nas aproximações iniciais:')\n",
+    "print('f(-1) =', f(-1))\n",
+    "print('f(0) =', f(0))\n",
+    "print('f(1) =', f(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testando cada um dos métodos\n",
+    "\n",
+    "Os métodos irão rodar por 9 iterações e será possível observar a qualidade da aproximação de cada um.\n",
+    "\n",
+    "O método da secante, que é sujeito a erros por estar realizando divisão por 0, evita isso retornando os mesmos valores de `x` e `xo` que foram utilizados como entrada da função."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raiz encontrada pelo método da secante:\n",
+      "x = -0.7390851332151607 | xo = -0.7390851332151607\n",
+      "f(x) = 0.0 | f(xo) = 0.0\n",
+      "\n",
+      "Raiz encontrada pelo método de Newton:\n",
+      "x = -0.7390851332151607\n",
+      "f(x) = 0.0\n",
+      "\n",
+      "Intervalo encontrado pelo método da bissecção:\n",
+      "Raiz está entre: (-0.7392578125, -0.73828125)\n",
+      "f(a) = -0.0002890091467900868 | f(b) = 0.001345149751805108\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    x_secante, xo_secante = cn.metodo_secante(f, x_secante, xo_secante)\n",
+    "    \n",
+    "    x_newton = cn.metodo_newton(f, flinha, x_newton)\n",
+    "    \n",
+    "    a_bi, b_bi = cn.metodo_bisseccao(f, a_bi, b_bi)\n",
+    "\n",
+    "print('Raiz encontrada pelo método da secante:')\n",
+    "print('x =', x_secante, '| xo =', xo_secante)\n",
+    "print('f(x) =', f(x_secante), '| f(xo) =', f(xo_secante))\n",
+    "\n",
+    "print('\\nRaiz encontrada pelo método de Newton:')\n",
+    "print('x =', x_newton)\n",
+    "print('f(x) =', f(x_newton))\n",
+    "\n",
+    "print('\\nIntervalo encontrado pelo método da bissecção:')\n",
+    "print('Raiz está entre:', (a_bi, b_bi))\n",
+    "print('f(a) =', f(a_bi), '| f(b) =', f(b_bi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -303,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
